--- a/community/index.html
+++ b/community/index.html
@@ -4,8 +4,10 @@ title: Zuurix.com - Community
 ---
 <h1>Community</h1>
 
-<p>Network</p>
+<p>Zuurix network</p>
 
-<a href="https://www.facebook.com/GamesByZuurix/" title="Facebook page"> </a>
+<a href="https://www.facebook.com/GamesByZuurix/">Facebook page</a>
+<a href="http://steamcommunity.com/groups/GamesByZuurix">Steam group</a>
+<a href="https://twitter.com/DeveloperZuurix">Twitter</a>
 
 {% include disqus.html %}
