"Community" page update

--- a/community/index.html
+++ b/community/index.html
@@ -4,12 +4,12 @@ title: Zuurix.com - Community
 ---
 <h1>Community</h1>
 
-<p>Zuurix network</p>
+<p>Network</p>
 
-<li>
-<a href="https://www.facebook.com/GamesByZuurix/">Facebook page</a>
-<a href="http://steamcommunity.com/groups/GamesByZuurix">Steam group</a>
-<a href="https://twitter.com/DeveloperZuurix">Twitter</a>
-</li>
+<ul>
+<li><a href="https://www.facebook.com/GamesByZuurix/">Facebook page</a></li>
+<li><a href="http://steamcommunity.com/groups/GamesByZuurix">Steam group</a></li>
+<li><a href="https://twitter.com/DeveloperZuurix">Twitter</a></li>
+</ul>
 
 {% include disqus.html %}
