"Community" page update

--- a/community/index.html
+++ b/community/index.html
@@ -4,9 +4,9 @@ title: Zuurix.com - Community
 ---
 <h1>Community</h1>
 
-<p>Network</p>
+<p>Zuurix on other sites</p>
 
-<ul>
+<ul style="list-style-type:none">
 <li><a href="https://www.facebook.com/GamesByZuurix/">Facebook page</a></li>
 <li><a href="http://steamcommunity.com/groups/GamesByZuurix">Steam group</a></li>
 <li><a href="https://twitter.com/DeveloperZuurix">Twitter</a></li>
