--- a/games/index.html
+++ b/games/index.html
@@ -14,6 +14,10 @@ title: Zuurix.com - Games
 	<a href="http://store.steampowered.com/app/465020" class="myButton">Buy ></a>
 	<a href="https://zuurix.github.io/sector-six-press-kit/" class="myButton">Press kit ></a>
 	
+	<comments>
+	<a>Comments</a>
+	</comments>
+	
 	{% include disqus.html %}
 	
 </div><!-- /.blurb -->
