--- a/community/index.html
+++ b/community/index.html
@@ -12,4 +12,8 @@ title: Zuurix.com - Community
 <li><a href="https://twitter.com/DeveloperZuurix">Twitter</a></li>
 </ul>
 
+<comments>
+<a>Comments</a>
+</comments>
+
 {% include disqus.html %}
