--- a/index.html
+++ b/index.html
@@ -5,6 +5,10 @@ title: Zuurix.com - Home
 <div class="blurb">
 	
 	<h1>Home</h1>
+	
+	<comments>
+	<a>Welcome to home for awesome indie games created by Zuurix!</a>
+	</comments>
 
 <ul class="posts">
 	
