--- a/index.html
+++ b/index.html
@@ -6,8 +6,10 @@ title: Zuurix.com - Home
 	
 	<h1>Home</h1>
 	
+	<p>Welcome to home for awesome indie games made by Zuurix</p>
+	
 	<comments>
-	<a>Welcome to home for awesome indie games created by Zuurix!</a>
+	<a>Blog</a>
 	</comments>
 
 <ul class="posts">
