--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@ title: Zuurix.com - Home
 	
 	<h1>Home</h1>
 	
-	<p>Welcome to home for awesome indie games made by Zuurix</p>
+	<p>Welcome to home for awesome indie games created by Zuurix!</p>
 	
 	<comments>
 	<a>Blog</a>
