--- a/games/index.html
+++ b/games/index.html
@@ -5,14 +5,19 @@ title: Zuurix.com - Games
 <div class="blurb">
 	<h1>Games</h1>
 	
-	<p>Sector Six</p>
+	<comments>
+	<a>Sector Six</a>
+	</comments>
 	
 	<a href="http://imgur.com/7ySqJck"><img src="http://i.imgur.com/7ySqJck.png" title="source: imgur.com" width="270" height="270"/></a>
 	
 	<p>Sector Six is an elegant and innovative RPG/shoot 'em up hybrid.</p>	
 	
-	<a href="http://store.steampowered.com/app/465020" class="myButton">Buy ></a>
-	<a href="https://zuurix.github.io/sector-six-press-kit/" class="myButton">Press kit ></a>
+	
+	<ul style="list-style-type:none">
+	<li><a href="http://store.steampowered.com/app/465020/">Get now from Steam</a></li>
+	<li><a href="http://zuurix.com/sector-six-press-kit/">Press kit</a></li>
+	</ul>
 	
 	<comments>
 	<a>Comments</a>
