--- a/community/index.html
+++ b/community/index.html
@@ -4,7 +4,9 @@ title: Zuurix.com - Community
 ---
 <h1>Community</h1>
 
-<p>Zuurix on other sites</p>
+<comments>
+<a>Zuurix on other sites</a>
+</comments>
 
 <ul style="list-style-type:none">
 <li><a href="https://www.facebook.com/GamesByZuurix/">Facebook page</a></li>
