Added information about my other games on games page

--- a/games/index.html
+++ b/games/index.html
@@ -13,10 +13,19 @@ title: Zuurix.com - Games
 	
 	<p>Sector Six is an elegant and innovative RPG/shoot 'em up hybrid.</p>	
 	
-	
 	<ul style="list-style-type:none">
 	<li><a href="http://store.steampowered.com/app/465020/">Get now from Steam</a></li>
 	<li><a href="http://zuurix.com/sector-six-press-kit/">Press kit</a></li>
+	</ul>
+	
+	<comments>
+	<a>Other games</a>
+	</comments>
+	
+	<p>Visit archive containing my old games, side projects and games made for competitions</p>	
+	
+	<ul style="list-style-type:none">
+	<li><a href="">Visit archive on Itch.io</a></li>
 	</ul>
 	
 	<comments>
