Games page update

--- a/games/index.html
+++ b/games/index.html
@@ -7,9 +7,7 @@ title: Zuurix.com - Games
 	
 	<comments>
 	<a>Sector Six</a>
-	</comments>
-	
-	<a href="http://imgur.com/7ySqJck"><img src="http://i.imgur.com/7ySqJck.png" title="source: imgur.com" width="270" height="270"/></a>
+	</comments>	
 	
 	<p>Sector Six is an elegant and innovative RPG/shoot 'em up hybrid.</p>	
 	
@@ -25,7 +23,7 @@ title: Zuurix.com - Games
 	<p>Visit archive containing my old games, side projects and games made for competitions</p>	
 	
 	<ul style="list-style-type:none">
-	<li><a href="">Visit archive on Itch.io</a></li>
+	<li><a href="https://itch.io/c/2596/other-games-by-zuurix">Visit archive on Itch.io</a></li>
 	</ul>
 	
 	<comments>
