--- a/games/index.html
+++ b/games/index.html
@@ -20,7 +20,7 @@ title: Zuurix.com - Games
 	<a>Other games</a>
 	</comments>
 	
-	<p>Visit archive containing my old games, side projects and games made for competitions</p>	
+	<p>Visit archive containing my old games, side projects and games made for competitions.</p>	
 	
 	<ul style="list-style-type:none">
 	<li><a href="https://itch.io/c/2596/other-games-by-zuurix">Visit archive on Itch.io</a></li>
