--- a/community/index.html
+++ b/community/index.html
@@ -5,7 +5,7 @@ title: Zuurix.com - Community
 <h1>Community</h1>
 
 <comments>
-<a>Zuurix on other sites</a>
+<a>Links</a>
 </comments>
 
 <ul style="list-style-type:none">
