--- a/community/index.html
+++ b/community/index.html
@@ -9,9 +9,11 @@ title: Zuurix.com - Community
 </comments>
 
 <ul style="list-style-type:none">
-<li><a href="https://www.facebook.com/GamesByZuurix/">Facebook page</a></li>
-<li><a href="http://steamcommunity.com/groups/GamesByZuurix">Steam group</a></li>
-<li><a href="https://twitter.com/DeveloperZuurix">Twitter</a></li>
+<li><a href="https://www.facebook.com/GamesByZuurix/">Zuurix's Facebook page</a></li>
+<li><a href="http://steamcommunity.com/groups/GamesByZuurix">Zuurix's Steam group</a></li>
+<li><a href="http://games-by-zuurix.wikia.com/wiki/Games_by_Zuurix_Wiki">Games by Zuurix Wiki</a></li>
+<li><a href="https://twitter.com/DeveloperZuurix">Zuurix on Twitter</a></li>
+<li><a href="https://zuurix.itch.io/">Zuurix on Itch.io</a></li>
 </ul>
 
 <comments>
