Community page update

--- a/community/index.html
+++ b/community/index.html
@@ -13,6 +13,7 @@ title: Zuurix.com - Community
 <li><a href="http://steamcommunity.com/groups/GamesByZuurix">Zuurix's Steam group</a></li>
 <li><a href="https://twitter.com/DeveloperZuurix">Zuurix on Twitter</a></li>
 <li><a href="https://zuurix.itch.io/">Zuurix on Itch.io</a></li>
+<li><a href="http://www.indiedb.com/members/zuurix">Zuurix on IndieDB</a></li>
 <li><a href="http://games-by-zuurix.wikia.com/wiki/Games_by_Zuurix_Wiki">Games by Zuurix Wiki</a></li>
 </ul>
 
