Community page update

--- a/community/index.html
+++ b/community/index.html
@@ -4,6 +4,8 @@ title: Zuurix.com - Community
 ---
 <h1>Community</h1>
 
+<p>Follow, like, support, join, discuss!</p>
+
 <comments>
 <a>Links</a>
 </comments>
