--- a/games/index.html
+++ b/games/index.html
@@ -5,6 +5,8 @@ title: Zuurix.com - Games
 <div class="blurb">
 	<h1>Games</h1>
 	
+	<p>Discover games by Zuurix!</p>
+	
 	<comments>
 	<a>Sector Six</a>
 	</comments>	
