--- a/sector-six-press-kit/index.html
+++ b/sector-six-press-kit/index.html
@@ -5,7 +5,9 @@ title: Zuurix.com - Sector Six press kit
 <div class="blurb">
 	<h1>Sector Six press kit</h1>
 	
-	<h2>Developer</h2> 
+	<comments>
+	<a>Developer</a>
+	</comments>
 	
 	<ul style="list-style-type:none">
 	<li>Zuurix</li>
@@ -14,7 +16,9 @@ title: Zuurix.com - Sector Six press kit
 	<li><b>Twitter:</b> https://twitter.com/DeveloperZuurix</li>
 	</ul>
 	
-	<h2>Publisher</h2>
+	<comments>
+	<a>Publisher</a>
+	</comments>
 	
 	<ul style="list-style-type:none">
 
@@ -23,7 +27,9 @@ title: Zuurix.com - Sector Six press kit
 
 	</ul>
 	
-	<h2>Availability</h2>
+	<comments>
+	<a>Availability</a>
+	</comments>
 	
 	<ul style="list-style-type:none">
 
@@ -33,7 +39,9 @@ title: Zuurix.com - Sector Six press kit
 
 	</ul>
 	
-	<h2>Press contact</h2>
+	<comments>
+	<a>Press contact</a>
+	</comments>
 	
 	<ul style="list-style-type:none">
 
@@ -42,7 +50,9 @@ title: Zuurix.com - Sector Six press kit
 
 	</ul>
 	
-	<h2>Description</h2>
+	<comments>
+	<a>Game description</a>
+	</comments>
 	
 	<p><i>Create.</i> As you play the game, you receive procedurally generated parts and experience. Parts is what you build your spaceship from and experience allows you to level up. Leveling up increases amount of parts you can add to your spaceship and gives ability points, which can be used to unlock and upgrade combat abilities.</p>
 	
@@ -50,18 +60,24 @@ title: Zuurix.com - Sector Six press kit
 	
 	<p><i>Repeat.</i> You destroyed enemies, mission accomplished! Time to upgrade your spaceship again and start another mission. But which part your will add your spaceship? Will you refill your alloy container? Will you upgrade your weapons with an amplifier? Will you choose weapon over defensive part? Which new ability you will unlock? Which mission will you choose? Story mission? Boss mission? Kill mission? Will you try to complete escort mission with increased difficulty? Will you try to resurrect destroyed region or secure region that is currently under siege? Innovative Sector Six systems will constantly provide hundreds of opportunities to keep creation and destruction fresh!</p>
 	
-	<h2>Story</h2>
+	<comments>
+	<a>Game story</a>
+	</comments>
 	
 	<p>The Universe exists in layers, called Sectors. Sector Six, the youngest of the Sectors is under attack by the Machines, massive automatic spaceships. They are moving across the Sector Six, destroying everything in their way.</p>
 	<p>You are Azimar, you are fighter of the Negati Armada that is the only thing that delays the complete destruction Sector Six.</p>
 	<p>One day, you are sent to protect the carrier of the mysterious artifact, that is as powerful and ancient as the Machines.</p>
 	<p>After dramatic chain of events, you become the carrier of the artifact and it's up to you to unlock its power and save Sector Six.</p>
 	
-	<h2>Trailer</h2>
+	<comments>
+	<a>Trailer</a>
+	</comments>
 	
 	<iframe width="560" height="315" src="https://www.youtube.com/embed/Ed_YHdoMU-E" frameborder="0" allowfullscreen></iframe>
 	
-	<h2>Screenshots</h2>
+	<comments>
+	<a>Screenshots</a>
+	</comments>
 	
 	<a href="http://imgur.com/CRuHOMV"><img src="http://i.imgur.com/CRuHOMV.png" title="source: imgur.com" /></a>
 	
@@ -72,7 +88,9 @@ title: Zuurix.com - Sector Six press kit
 	<a href="http://imgur.com/NMicgHg"><img src="http://i.imgur.com/NMicgHg.png" title="source: imgur.com" /></a>
 	
 
-	<h2>Images</h2>
+	<comments>
+	<a>Images</a>
+	</comments>
 	
 	<a href="http://imgur.com/LY05dbc"><img src="http://i.imgur.com/LY05dbc.png" title="source: imgur.com" /></a>
 	
