Community page update

--- a/community/index.html
+++ b/community/index.html
@@ -4,7 +4,7 @@ title: Zuurix.com - Community
 ---
 <h1>Community</h1>
 
-<p>Follow, like, share, join, discuss!</p>
+<p>Follow, like, share, join, contribute, discuss!</p>
 
 <comments>
 <a>Links</a>
