Games page update

--- a/games/index.html
+++ b/games/index.html
@@ -13,6 +13,14 @@ title: Zuurix.com - Games
 	
 	<p>Sector Six is an elegant and innovative RPG/shoot 'em up hybrid.</p>	
 	
+	<style>
+	img { 
+    	width:100%; 
+	}
+	</style>
+	
+	<img src="" alt="Sector Six" style="width:256;height:256;">
+	
 	<ul style="list-style-type:none">
 	<li><a href="http://store.steampowered.com/app/465020/">Get now from Steam</a></li>
 	<li><a href="http://zuurix.com/sector-six-press-kit/">Press kit</a></li>
