--- a/games/index.html
+++ b/games/index.html
@@ -13,7 +13,13 @@ title: Zuurix.com - Games
 	
 	<p>Sector Six is an elegant and innovative RPG/shoot 'em up hybrid.</p>	
 	
-	<img src="" alt="Sector Six">
+	<style>
+	img { 
+    	width:100%; 
+	}
+	</style>
+	
+	<img src="https://raw.githubusercontent.com/Zuurix/Zuurix.github.io/master/images/miscellaneous/Steam%20Workshop%20Image.png" alt="Sector Six" style="width:128px;height:128px;">
 	
 	<ul style="list-style-type:none">
 	<li><a href="http://store.steampowered.com/app/465020/">Get now from Steam</a></li>
