--- a/games/index.html
+++ b/games/index.html
@@ -22,11 +22,13 @@ title: Zuurix.com - Games
 	<div>
 	<img src="https://raw.githubusercontent.com/Zuurix/Zuurix.github.io/master/images/miscellaneous/Steam%20Workshop%20Image.png" alt="Sector Six" style="width:256px;height:256px;">
 	</div>
-		
+	
+	<div>
 	<ul style="list-style-type:none">
 	<li><a href="http://store.steampowered.com/app/465020/">Get now from Steam</a></li>
 	<li><a href="http://zuurix.com/sector-six-press-kit/">Press kit</a></li>
 	</ul>
+	</div>
 	
 	<comments>
 	<a>Other games</a>
