--- a/games/index.html
+++ b/games/index.html
@@ -11,24 +11,15 @@ title: Zuurix.com - Games
 	<a>Sector Six</a>
 	</comments>	
 	
-	<p>Sector Six is an elegant and innovative RPG/shoot 'em up hybrid.</p>	
-	
-	<style>
-	img { 
-    	width:100%; 
-	}
-	</style>
-	
-	
 	<div>
-	<img src="https://raw.githubusercontent.com/Zuurix/Zuurix.github.io/master/images/miscellaneous/Steam%20Workshop%20Image.png" alt="Sector Six" style="width:256px;height:256px;">
-	</div><div>
-	<ul style="list-style-type:none">
+    	<p style="float: left;"><img src="https://raw.githubusercontent.com/Zuurix/Zuurix.github.io/master/images/miscellaneous/Steam%20Workshop%20Image.png" height="200px" width="200px" border="1px"></p>
+    	<p>Sector Six is an elegant and innovative RPG/shoot 'em up hybrid.</p>	
+	<ul style="list-style-type:none; float:left;">
 	<li><a href="http://store.steampowered.com/app/465020/">Get now from Steam</a></li>
 	<li><a href="http://zuurix.com/sector-six-press-kit/">Press kit</a></li>
 	</ul>
 	</div>
-	
+		
 	<comments>
 	<a>Other games</a>
 	</comments>
