--- a/games/index.html
+++ b/games/index.html
@@ -11,7 +11,7 @@ title: Zuurix.com - Games
 	<a>Sector Six</a>
 	</comments>	
 	
-    	<img src="https://raw.githubusercontent.com/Zuurix/Zuurix.github.io/master/images/miscellaneous/Steam%20Workshop%20Image.png" height="200px" width="200px" border="1px">
+    	<img src="https://raw.githubusercontent.com/Zuurix/Zuurix.github.io/master/images/miscellaneous/Steam%20Workshop%20Image.png" height="200px" width="200px">
     	
 	<p>Sector Six is an elegant and innovative RPG/shoot 'em up hybrid.</p>	
 	
