--- a/games/index.html
+++ b/games/index.html
@@ -11,11 +11,11 @@ title: Zuurix.com - Games
 	<a>Sector Six</a>
 	</comments>	
 	
-    	<img src="https://raw.githubusercontent.com/Zuurix/Zuurix.github.io/master/images/miscellaneous/Steam%20Workshop%20Image.png"; height="200px"; width="200px"; float: left; margin: 20px 20px 20px 0;>
+    	<img src="https://raw.githubusercontent.com/Zuurix/Zuurix.github.io/master/images/miscellaneous/Steam%20Workshop%20Image.png"; style="height: 200; width: 200; float: left; margin: 20px 20px 20px 0;">
     	
 	<p>Sector Six is an elegant and innovative RPG/shoot 'em up hybrid.</p>	
 	
-	<ul style="list-style-type:none" margin-bottom: 124px;>
+	<ul style="list-style-type:none; margin-bottom: 124px;">
 	<li><a href="http://store.steampowered.com/app/465020/">Get now from Steam</a></li>
 	<li><a href="http://zuurix.com/sector-six-press-kit/">Press kit</a></li>
 	</ul>
