--- a/games/index.html
+++ b/games/index.html
@@ -5,13 +5,13 @@ title: Zuurix.com - Games
 <div class="blurb">
 	<h1>Games</h1>
 	
-	<p>Discover games by Zuurix.</p>
+	<p>Discover unique games by Zuurix!</p>
 	
 	<comments>
 	<a>Sector Six</a>
 	</comments>	
 	
-    	<img src="https://raw.githubusercontent.com/Zuurix/Zuurix.github.io/master/images/miscellaneous/Steam%20Workshop%20Image.png"; style="height: 200; width: 200; float: left; margin: 20px 20px 20px 0;">
+    	<img src="https://raw.githubusercontent.com/Zuurix/Zuurix.github.io/master/images/miscellaneous/Steam%20Workshop%20Image.png"; style="height: 200px; width: 200px; float: left; margin: 20px 20px 20px 0;">
     	
 	<p>Sector Six is an elegant and innovative RPG/shoot 'em up hybrid.</p>	
 	
