Games page update

--- a/games/index.html
+++ b/games/index.html
@@ -15,9 +15,16 @@ title: Zuurix.com - Games
     	
 	<p>Sector Six is an elegant and innovative RPG/shoot 'em up hybrid.</p>	
 	
+	<ol style="list-style-type:none; margin-bottom: 124px;">
+	<li><a>Build your own spaceship from randomly generated parts</a></li>
+	<li><a>Choose your own difficulty with modular difficulty system</a></li>
+	<li><a>Become a hero in the story-driven missions with cutscenes and dialogue</a></li>
+		
+	</ol>
+	
 	<ul style="list-style-type:none; margin-bottom: 124px;">
-	<li><a href="http://store.steampowered.com/app/465020/">Get now from Steam</a></li>
-	<li><a href="http://zuurix.com/sector-six-press-kit/">Press kit</a></li>
+	<li><a href="http://store.steampowered.com/app/465020/">Get Sector Six now from Steam!</a></li>
+	<li><a href="http://zuurix.com/sector-six-press-kit/">View press kit</a></li>
 	</ul>
 		
 	<comments>
