Games page update

--- a/games/index.html
+++ b/games/index.html
@@ -11,11 +11,11 @@ title: Zuurix.com - Games
 	<a>Sector Six</a>
 	</comments>	
 	
-    	<img src="https://raw.githubusercontent.com/Zuurix/Zuurix.github.io/master/images/miscellaneous/Steam%20Workshop%20Image.png"; style="height: 200px; width: 200px; float: left; margin: 20px 20px 20px 0;">
+    	<img src="https://raw.githubusercontent.com/Zuurix/Zuurix.github.io/master/images/miscellaneous/Steam%20Workshop%20Image.png"; style="height: 256px; width: 256px; float: left; margin: 20px 20px 20px 0;">
     	
 	<p>Sector Six is an elegant and innovative RPG/shoot 'em up hybrid.</p>	
 	
-	<ol style="list-style-type:none; margin-bottom: 124px;">
+	<ol style="margin-bottom: 124px;">
 	<li><a>Build your own spaceship from randomly generated parts</a></li>
 	<li><a>Choose your own difficulty with modular difficulty system</a></li>
 	<li><a>Become a hero in the story-driven missions with cutscenes and dialogue</a></li>
