--- a/games/index.html
+++ b/games/index.html
@@ -15,7 +15,7 @@ title: Zuurix.com - Games
     	
 	<p>Sector Six is an elegant and innovative RPG/shoot 'em up hybrid.</p>	
 	
-	<ol style="margin-bottom: 124px;">
+	<ol style="list-style-type:disc; margin-bottom: 24px;">
 	<li><a>Build your own spaceship from randomly generated parts</a></li>
 	<li><a>Choose your own difficulty with modular difficulty system</a></li>
 	<li><a>Become a hero in the story-driven missions with cutscenes and dialogue</a></li>
