--- a/games/index.html
+++ b/games/index.html
@@ -16,9 +16,9 @@ title: Zuurix.com - Games
 	<p>Sector Six is an elegant and innovative RPG/shoot 'em up hybrid.</p>	
 	
 	<ol style="list-style-type:disc; margin-bottom: 24px;">
-	<li><a>Build your own spaceship from randomly generated parts</a></li>
-	<li><a>Choose your own difficulty with modular difficulty system</a></li>
-	<li><a>Become a hero in the story-driven missions with cutscenes and dialogue</a></li>
+	<li><p>Build your own spaceship from randomly generated parts</p></li>
+	<li><p>Choose your own difficulty with modular difficulty system<p></li>
+	<li><p>Become a hero in the story-driven missions with cutscenes and dialogue</p></li>
 		
 	</ol>
 	
