--- a/games/index.html
+++ b/games/index.html
@@ -15,7 +15,7 @@ title: Zuurix.com - Games
     	
 	<p>Sector Six is an elegant and innovative RPG/shoot 'em up hybrid.</p>	
 	
-	<ol style="list-style-type:disc; margin-bottom: 24px;">
+	<ol style="list-style-type:disc; margin-bottom: 24px; margin-left: 64px;">
 	<li><p>Build your own spaceship from randomly generated parts</p></li>
 	<li><p>Choose your own difficulty with modular difficulty system<p></li>
 	<li><p>Become a hero in the story-driven missions with cutscenes and dialogue</p></li>
