--- a/games/index.html
+++ b/games/index.html
@@ -24,6 +24,8 @@ title: Zuurix.com - Games
 	<a>Other games</a>
 	</comments>
 	
+	<img src="https://raw.githubusercontent.com/Zuurix/Zuurix.github.io/master/images/miscellaneous/Old%20game%20archive%20image.png"; style="height: 256px; width: 256px; float: left; margin: 20px 20px 20px 0;">
+	
 	<p>Visit archive containing my old games, side projects and games made for competitions.</p>	
 	
 	<ul style="list-style-type:none">
