--- a/games/index.html
+++ b/games/index.html
@@ -5,7 +5,7 @@ title: Zuurix.com - Games
 <div class="blurb">
 	<h1>Games</h1>
 	
-	<p>Discover unique games by Zuurix!</p>
+	<p>Play games by Zuurix!</p>
 	
 	<comments>
 	<a>Sector Six</a>
