--- a/games/index.html
+++ b/games/index.html
@@ -11,7 +11,7 @@ title: Zuurix.com - Games
 	<a>Sector Six</a>
 	</comments>	
 	
-    	<img src="https://raw.githubusercontent.com/Zuurix/Zuurix.github.io/master/images/miscellaneous/Steam%20Workshop%20Image.png"; style="height: 256px; width: 256px; float: left; margin: 20px 20px 20px 0;">
+    	<img src="https://raw.githubusercontent.com/Zuurix/Zuurix.github.io/master/images/miscellaneous/Steam%20Workshop%20Image.png" style="height: 256px; width: 256px; float: left; margin: 20px 20px 20px 0;">
     	
 	<p>Sector Six is an elegant and innovative RPG/shoot 'em up hybrid.</p>	
 	
@@ -24,12 +24,12 @@ title: Zuurix.com - Games
 	<a>Other games</a>
 	</comments>
 	
-	<img src="https://raw.githubusercontent.com/Zuurix/Zuurix.github.io/master/images/miscellaneous/Old%20game%20archive%20image.png"; style="height: 256px; width: 256px; float: left; margin: 20px 20px 20px 0;">
+	<img src="https://raw.githubusercontent.com/Zuurix/Zuurix.github.io/master/images/miscellaneous/Old%20game%20archive%20image.png" style="height: 256px; width: 256px; float: left; margin: 20px 20px 20px 0;">
 	
 	<p>Visit archive containing my old games, side projects and games made for competitions.</p>	
 	
 	<ul style="list-style-type:none; margin-bottom: 202px;">
-	<li><a href="https://itch.io/c/2596/other-games-by-zuurix">Visit archive on Itch.io</a></li>
+	<li><a href="https://itch.io/c/2596/other-games-by-zuurix" target="_blank">Visit archive on Itch.io</a></li>
 	</ul>
 	
 	<comments>
