--- a/community/index.html
+++ b/community/index.html
@@ -11,12 +11,12 @@ title: Zuurix.com - Community
 </comments>
 
 <ul style="list-style-type:none">
-<li><a href="https://www.facebook.com/GamesByZuurix/">Zuurix's Facebook page</a></li>
-<li><a href="http://steamcommunity.com/groups/GamesByZuurix">Zuurix's Steam group</a></li>
-<li><a href="https://twitter.com/DeveloperZuurix">Zuurix on Twitter</a></li>
-<li><a href="https://zuurix.itch.io/">Zuurix on Itch.io</a></li>
-<li><a href="http://www.indiedb.com/members/zuurix">Zuurix on IndieDB</a></li>
-<li><a href="http://games-by-zuurix.wikia.com/wiki/Games_by_Zuurix_Wiki">Games by Zuurix Wiki</a></li>
+<li><a href="https://www.facebook.com/GamesByZuurix/" target="_blank">Zuurix's Facebook page</a></li>
+<li><a href="http://steamcommunity.com/groups/GamesByZuurix" target="_blank">Zuurix's Steam group</a></li>
+<li><a href="https://twitter.com/DeveloperZuurix" target="_blank">Zuurix on Twitter</a></li>
+<li><a href="https://zuurix.itch.io/" target="_blank">Zuurix on Itch.io</a></li>
+<li><a href="http://www.indiedb.com/members/zuurix" target="_blank">Zuurix on IndieDB</a></li>
+<li><a href="http://games-by-zuurix.wikia.com/wiki/Games_by_Zuurix_Wiki" target="_blank">Games by Zuurix Wiki</a></li>
 </ul>
 
 <comments>
