About page update

--- a/about/index.html
+++ b/about/index.html
@@ -18,7 +18,7 @@ title: Zuurix.com - About
 
 <p>Since I have begun making games, I have made 4 larger games and several smaller ones. Usually, I work alone on my games because I'm not a team guy and that means that I have to do almost everything myself.
 
-<p>Luckily I'm not that bad at programming and I can make acceptable graphics. 
+<p>Luckily I'm not that bad at programming and I can make decent graphics. 
 
 <p>My goal is to create modern, complex, enormous games and every day I am getting closer to achieving that goal. I am very dedicated to making my games and it's the thing that I enjoy doing most.
 
