Press kit update

--- a/sector-six-press-kit/index.html
+++ b/sector-six-press-kit/index.html
@@ -34,7 +34,7 @@ title: Zuurix.com - Sector Six press kit
 	<ul style="list-style-type:none">
 
 	<li><b>Platforms:</b> Windows, Linux</li>
-	<li><b>Stores:</b> Steam</li>
+	<li><b>Stores:</b> Steam http://store.steampowered.com/app/465020</li>
 	<li><b>Price:</b> 9.99 €</li>
 
 	</ul>
@@ -68,6 +68,20 @@ title: Zuurix.com - Sector Six press kit
 	<p>You are Azimar, you are fighter of the Negati Armada that is the only thing that delays the complete destruction Sector Six.</p>
 	<p>One day, you are sent to protect the carrier of the mysterious artifact, that is as powerful and ancient as the Machines.</p>
 	<p>After dramatic chain of events, you become the carrier of the artifact and it's up to you to unlock its power and save Sector Six.</p>
+	
+	<comments>
+	<a>Features</a>
+	</comments>
+	
+	<ol style="list-style-type:disc">
+
+	<li><b>Spaceship building from procedurally generated parts
+	<li><b>Story driven missions including cutscenes and dialog
+	<li><b>Unique silhouette art style
+	<li><b>Complex combat system
+	<li><b>Deep character customization
+	<li><b>Millions of randomly generated items
+	<li><b>Choose your own difficulty with modular difficulty system
 	
 	<comments>
 	<a>Trailer</a>
