Press kit update
Added some new resources

--- a/sector-six-press-kit/index.html
+++ b/sector-six-press-kit/index.html
@@ -75,14 +75,16 @@ title: Zuurix.com - Sector Six press kit
 	
 	<ol style="list-style-type:disc">
 
-	<li><b>Spaceship building from procedurally generated parts
-	<li><b>Story driven missions including cutscenes and dialog
-	<li><b>Unique silhouette art style
-	<li><b>Complex combat system
-	<li><b>Deep character customization
-	<li><b>Millions of randomly generated items
-	<li><b>Choose your own difficulty with modular difficulty system
-	
+	<li><a>Spaceship building from procedurally generated parts</a></li>
+	<li><a>Story driven missions including cutscenes and dialog</a></li>
+	<li><a>Unique silhouette art style</a></li>
+	<li><a>Complex combat system</a></li>
+	<li><a>Deep character customization</a></li>
+	<li><a>Millions of randomly generated items</a></li>
+	<li><a>Choose your own difficulty with modular difficulty system</a></li>
+		
+	</ol>
+		
 	<comments>
 	<a>Trailer</a>
 	</comments>
@@ -133,5 +135,17 @@ title: Zuurix.com - Sector Six press kit
 	<a href="http://imgur.com/6rQ5MgZ"><img src="http://i.imgur.com/6rQ5MgZ.png" title="source: imgur.com" /></a>
 
         <a href="http://imgur.com/HE9VSOk"><img src="http://i.imgur.com/HE9VSOk.png" title="source: imgur.com" /></a>
+	
+	<comments>
+	<a>GIFs</a>
+	</comments>
+	
+	<a href="http://imgur.com/2shqyBq"><img src="http://i.imgur.com/2shqyBq.gif" title="source: imgur.com" /></a>
+	
+	<a href="http://imgur.com/wg2otXb"><img src="http://i.imgur.com/wg2otXb.gif" title="source: imgur.com" /></a>
+	
+	<a href="http://imgur.com/SiqaHV3"><img src="http://i.imgur.com/SiqaHV3.gif" title="source: imgur.com" /></a>
+	
+	<a href="http://imgur.com/PwxV1fm"><img src="http://i.imgur.com/PwxV1fm.gif" title="source: imgur.com" /></a>
 	
 </div><!-- /.blurb -->
