Press kit update

--- a/sector-six-press-kit/index.html
+++ b/sector-six-press-kit/index.html
@@ -64,10 +64,13 @@ title: Zuurix.com - Sector Six press kit
 	<a>Game story</a>
 	</comments>
 	
+	<p><i>Sector Six is under attack, the Machines, massive automatic spaceships are destroying everything! No weapon can stop the Machines, the only hope is the Elder Mechanism, an ancient device of the mighty Almadi civilization, who colonized Sector Six a long time ago.</i></p>
+
+	<p><i>You take the role of the Negati Armada's best fighter, who, due to a dramatic chain of events receives the Elder Mechanism. Go on an epic journey across the mysterious Sector, develop your spaceship, activate the Elder Mechanism and defeat the Machines, before it's too late!</i></p>
+	
 	<p>The Universe exists in layers, called Sectors. Sector Six, the youngest of the Sectors is under attack by the Machines, massive automatic spaceships. They are moving across the Sector Six, destroying everything in their way.</p>
-	<p>You are Azimar, you are fighter of the Negati Armada that is the only thing that delays the complete destruction Sector Six.</p>
-	<p>One day, you are sent to protect the carrier of the mysterious artifact, that is as powerful and ancient as the Machines.</p>
-	<p>After dramatic chain of events, you become the carrier of the artifact and it's up to you to unlock its power and save Sector Six.</p>
+
+	<p>You are Azimar, you are fighter of the Negati Armada that is the only thing that delays the complete destruction Sector Six. One day, you are sent to protect the carrier of the mysterious artifact, that is as powerful and ancient as the Machines. After dramatic chain of events, you become the carrier of the artifact and it's up to you to unlock its power and save Sector Six.</p>
 	
 	<comments>
 	<a>Features</a>
@@ -75,13 +78,13 @@ title: Zuurix.com - Sector Six press kit
 	
 	<ol style="list-style-type:disc">
 
-	<li><a>Spaceship building from procedurally generated parts</a></li>
-	<li><a>Story driven missions including cutscenes and dialog</a></li>
-	<li><a>Unique silhouette art style</a></li>
-	<li><a>Complex combat system</a></li>
-	<li><a>Deep character customization</a></li>
-	<li><a>Millions of randomly generated items</a></li>
-	<li><a>Choose your own difficulty with modular difficulty system</a></li>
+	<li><p>Spaceship building from procedurally generated parts</p></li>
+	<li><p>Story driven missions including cutscenes and dialog</p></li>
+	<li><p>Unique silhouette art style</p></li>
+	<li><p>Complex combat system</p></li>
+	<li><p>Deep character customization</p></li>
+	<li><p>Millions of randomly generated items</p></li>
+	<li><p>Choose your own difficulty with modular difficulty system</p></li>
 		
 	</ol>
 		
