--- a/sector-six-press-kit/index.html
+++ b/sector-six-press-kit/index.html
@@ -11,7 +11,7 @@ title: Zuurix.com - Sector Six press kit
 	
 	<ul style="list-style-type:none">
 	<li>Zuurix</li>
-	<li><b>Website:</b> https://zuurix.github.io/</li>
+	<li><b>Website:</b> http://zuurix.com//</li>
 	<li><b>Facebook:</b> https://www.facebook.com/Games-by-Zuurix-1417183375191866/</li>
 	<li><b>Twitter:</b> https://twitter.com/DeveloperZuurix</li>
 	</ul>
@@ -34,8 +34,22 @@ title: Zuurix.com - Sector Six press kit
 	<ul style="list-style-type:none">
 
 	<li><b>Platforms:</b> Windows, Linux</li>
-	<li><b>Stores:</b> Steam http://store.steampowered.com/app/465020</li>
+	<li><b>Stores:</b> Steam</li>
+	<li><b>Steam store link:</b>http://store.steampowered.com/app/465020</li>
 	<li><b>Price:</b> 9.99 €</li>
+
+	</ul>
+	
+	<comments>
+	<a>Status</a>
+	</comments>
+	
+	<ul style="list-style-type:none">
+
+	<li>In development</li>
+	<li>Beta</li>
+	<li>Early Access</li>
+	<li><b>Estimated release date:</b>Q4 2017</li>
 
 	</ul>
 	
