--- a/community/index.html
+++ b/community/index.html
@@ -16,6 +16,7 @@ title: Zuurix.com - Community
 <li><a href="https://twitter.com/DeveloperZuurix" target="_blank">Zuurix on Twitter</a></li>
 <li><a href="https://zuurix.itch.io/" target="_blank">Zuurix on Itch.io</a></li>
 <li><a href="http://www.indiedb.com/members/zuurix" target="_blank">Zuurix on IndieDB</a></li>
+ <li><a href="http://www.giantbomb.com/profile/zuurix/" target="_blank">Zuurix on Giant Bomb</a></li>
 <li><a href="http://games-by-zuurix.wikia.com/wiki/Games_by_Zuurix_Wiki" target="_blank">Games by Zuurix Wiki</a></li>
 </ul>
 
