Updated page: Other games

--- a/other-games/index.html
+++ b/other-games/index.html
@@ -4,7 +4,7 @@ title: Zuurix.com - Other games
 ---
 
 <div class="blurb">
-<h1>Games</h1>
+<h1>Other games</h1>
 	
 <p>Other games by Zuurix</p>
 	
@@ -16,7 +16,7 @@ title: Zuurix.com - Other games
     	
 <p>Battle For '17 is a simple shooter platformer made in 3 days.</p>	
 	
-<ul style="list-style-type:none; margin-bottom: 180px;">
+<ul style="list-style-type:none; margin-bottom: 196px;">
 <li><a href="https://zuurix.itch.io/battle-for-17" target="_blank">Download</a></li>
 </ul>
 	
