Updated page: Other games

--- a/other-games/index.html
+++ b/other-games/index.html
@@ -9,14 +9,14 @@ title: Zuurix.com - Other games
 <p>Other games by Zuurix</p>
 	
 <comments>
-<a>Battle For '17</a>
+<a>Battle for '17</a>
 </comments>	
 	
 <img src="https://github.com/Zuurix/Zuurix.github.io/blob/master/images/miscellaneous/Battle%20for%20'17%20Workshop.png?raw=true" style="height: 256px; width: 256px; float: left; margin: 20px 20px 20px 0;">
     	
-<p>Battle For '17 is a simple shooter platformer made in 3 days.</p>	
+<p><i>Battle for '17</i> is a simple shooter platformer made in 3 days.</p>	
 	
-<ul style="list-style-type:none; margin-bottom: 196px;">
+<ul style="list-style-type:none; margin-bottom: 202px;">
 <li><a href="https://zuurix.itch.io/battle-for-17" target="_blank">Download</a></li>
 </ul>
 	
