--- a/other-games/index.html
+++ b/other-games/index.html
@@ -8,13 +8,29 @@ title: Zuurix.com - Other games
 	
 <p>Other games by Zuurix</p>
 	
+/*Beyond the Gate*/
+	
+<comments>
+<a>Beyond the Gate</a>
+</comments>
+	
+<img src="https://github.com/Zuurix/Zuurix.github.io/blob/master/images/miscellaneous/Battle%20for%20'17%20Workshop.png?raw=true" style="height: 256px; width: 256px; float: left; margin: 20px 20px 20px 0;">
+    	
+<p>Beyond the Gate is an experimental RPG. Explore millions of worlds beyond the Gate and become the most powerful mage ever!</p>	
+	
+<ul style="list-style-type:none; margin-bottom: 202px;">
+<li><a href="https://zuurix.itch.io/beyond-the-gate" target="_blank">Download</a></li>
+</ul>
+	
+/*Battle for '17*/
+	
 <comments>
 <a>Battle for '17</a>
 </comments>	
 	
 <img src="https://github.com/Zuurix/Zuurix.github.io/blob/master/images/miscellaneous/Battle%20for%20'17%20Workshop.png?raw=true" style="height: 256px; width: 256px; float: left; margin: 20px 20px 20px 0;">
     	
-<p><i>Battle for '17</i> is a simple shooter platformer made in 3 days.</p>	
+<p>Battle for '17 is a simple shooter platformer made in 3 days.</p>	
 	
 <ul style="list-style-type:none; margin-bottom: 202px;">
 <li><a href="https://zuurix.itch.io/battle-for-17" target="_blank">Download</a></li>
