--- a/games/index.html
+++ b/games/index.html
@@ -29,7 +29,7 @@ title: Zuurix.com - Games
 	<p>Visit archive containing my old games, side projects and games made for competitions.</p>	
 	
 	<ul style="list-style-type:none; margin-bottom: 202px;">
-	<li><a href="https://itch.io/c/2596/other-games-by-zuurix" target="_blank">Visit archive on Itch.io</a></li>
+	<li><a href="http://zuurix.com/other-games/" target="_blank">Visit archive</a></li>
 	</ul>
 	
 	<comments>
