--- a/other-games/index.html
+++ b/other-games/index.html
@@ -6,7 +6,7 @@ title: Zuurix.com - Other games
 <div class="blurb">
 <h1>Other games</h1>
 	
-<p>Other games by Zuurix</p>
+<p>Old games, side projects and games made for competitions</p>
 	
 <comments>
 <a>Beyond the Gate</a>
