--- a/sector-six-press-kit/index.html
+++ b/sector-six-press-kit/index.html
@@ -68,6 +68,8 @@ title: Zuurix.com - Sector Six press kit
 	<a>Game description</a>
 	</comments>
 	
+	<p>Sector Six is an elegant and innovative RPG/shoot 'em up hybrid.</p>
+	
 	<p><i>Create.</i> As you play the game, you receive procedurally generated parts and experience. Parts is what you build your spaceship from and experience allows you to level up. Leveling up increases amount of parts you can add to your spaceship and gives ability points, which can be used to unlock and upgrade combat abilities.</p>
 	
 	<p><i>Destroy.</i> Once you are done with upgrading, equipping, modifying, refilling and optimizing your spaceship, it's time to test it in a fight! Choose one of many available missions to instantly jump into combat. Missions are procedurally generated, you will never know which enemies you will encounter next. There are many enemies in Sector Six, each comes with its own set of abilities, strengths, and weaknesses. Defeat them by dodging their projectiles and firing weapons on your spaceship by activating equipped abilities.</p>
