--- a/sector-six-press-kit/index.html
+++ b/sector-six-press-kit/index.html
@@ -35,7 +35,7 @@ title: Zuurix.com - Sector Six press kit
 
 	<li><b>Platforms:</b> Windows, Linux</li>
 	<li><b>Stores:</b> Steam</li>
-	<li><b>Steam store link:</b>http://store.steampowered.com/app/465020</li>
+	<li><b>Steam Store link: </b>http://store.steampowered.com/app/465020</li>
 	<li><b>Price:</b> 9.99 €</li>
 
 	</ul>
@@ -49,7 +49,7 @@ title: Zuurix.com - Sector Six press kit
 	<li>In development</li>
 	<li>Beta</li>
 	<li>Early Access</li>
-	<li><b>Estimated release date:</b>Q4 2017</li>
+	<li><b>Estimated release date: </b>Q4 2017</li>
 
 	</ul>
 	
