--- a/games/index.html
+++ b/games/index.html
@@ -19,6 +19,19 @@ title: Zuurix.com - Games
 	<li><a href="http://store.steampowered.com/app/465020/" target="_blank">Get Sector Six now from Steam!</a></li>
 	<li><a href="http://zuurix.com/sector-six-press-kit/">View press kit</a></li>
 	</ul>
+	
+	<comments>
+	<a>The Cursed Legion</a>
+	</comments>	
+	
+    	<img src="https://github.com/Zuurix/Zuurix.github.io/blob/master/images/miscellaneous/Square%20artwork%20with%20logo.png?raw=true" style="height: 256px; width: 256px; float: left; margin: 20px 20px 20px 0;">
+    	
+	<p>The Cursed Legion is a free single-player collectible card game that is currently in early alpha.</p>	
+	
+	<ul style="list-style-type:none; margin-bottom: 180px;">
+	<li><a href="http://gamejolt.com/games/the-cursed-legion/245161" target="_blank">Get from GameJolt!</a></li>
+	<li><a href="http://zuurix.com/the-cursed-legion-press-kit/">View press kit</a></li>
+	</ul>
 		
 	<comments>
 	<a>Other games</a>
