Added link to my Patreon page

--- a/community/index.html
+++ b/community/index.html
@@ -11,6 +11,7 @@ title: Zuurix.com - Community
 </comments>
 
 <ul style="list-style-type:none">
+<li><a href="https://www.patreon.com/zuurix" target="_blank">Zuurix's Patreon page</a></li>
 <li><a href="https://www.facebook.com/GamesByZuurix/" target="_blank">Zuurix's Facebook page</a></li>
 <li><a href="http://steamcommunity.com/groups/GamesByZuurix" target="_blank">Zuurix's Steam group</a></li>
 <li><a href="https://twitter.com/DeveloperZuurix" target="_blank">Zuurix on Twitter</a></li>
