Added community goals

--- a/community/index.html
+++ b/community/index.html
@@ -17,8 +17,21 @@ title: Zuurix.com - Community
 <li><a href="https://twitter.com/DeveloperZuurix" target="_blank">Zuurix on Twitter</a></li>
 <li><a href="https://zuurix.itch.io/" target="_blank">Zuurix on Itch.io</a></li>
 <li><a href="http://www.indiedb.com/members/zuurix" target="_blank">Zuurix on IndieDB</a></li>
- <li><a href="http://www.giantbomb.com/profile/zuurix/" target="_blank">Zuurix on Giant Bomb</a></li>
+<li><a href="http://www.giantbomb.com/profile/zuurix/" target="_blank">Zuurix on Giant Bomb</a></li>
 <li><a href="http://games-by-zuurix.wikia.com/wiki/Games_by_Zuurix_Wiki" target="_blank">Games by Zuurix Wiki</a></li>
+</ul>
+
+<comments>
+<a>Community goals</a>
+</comments>
+
+<ul style="list-style-type:none">
+<li><a>50 likes on Sector Six Facebook page</a></li>
+<li><a>50 likes on Games by Zuurix Facebook page</a></li>
+<li><a>100 Twitter followers @Developer Zuurix</a></li>
+<li><a>10 patrons on Patreon</a></li>
+<li><a>200 members in Games by Zuurix Steam group</a></li>
+<li><a>50 subscribers on Zuurix YouTube channel</a></li>
 </ul>
 
 <comments>
