Updated community goals

--- a/community/index.html
+++ b/community/index.html
@@ -26,12 +26,12 @@ title: Zuurix.com - Community
 </comments>
 
 <ul style="list-style-type:none">
-<li><a>50 likes on Sector Six Facebook page</a></li>
-<li><a>50 likes on Games by Zuurix Facebook page</a></li>
-<li><a>100 Twitter followers @Developer Zuurix</a></li>
-<li><a>10 patrons on Patreon</a></li>
-<li><a>200 members in Games by Zuurix Steam group</a></li>
-<li><a>50 subscribers on Zuurix YouTube channel</a></li>
+<li><p>50 likes on Sector Six Facebook page</p></li>
+<li><p>50 likes on Games by Zuurix Facebook page</p></li>
+<li><p>100 Twitter followers @Developer Zuurix</p></li>
+<li><p>10 patrons on Patreon</p></li>
+<li><p>200 members in Games by Zuurix Steam group</p></li>
+<li><p>50 subscribers on Zuurix YouTube channel</p></li>
 </ul>
 
 <comments>
