--- a/community/index.html
+++ b/community/index.html
@@ -26,12 +26,12 @@ title: Zuurix.com - Community
 </comments>
 
 <ul style="list-style-type:none">
-<li><p>50 likes on Sector Six Facebook page</p></li>
-<li><p>50 likes on Games by Zuurix Facebook page</p></li>
-<li><p>100 Twitter followers @Developer Zuurix</p></li>
-<li><p>10 patrons on Patreon</p></li>
-<li><p>200 members in Games by Zuurix Steam group</p></li>
-<li><p>50 subscribers on Zuurix YouTube channel</p></li>
+<li>50 likes on Sector Six Facebook page</li>
+<li>50 likes on Games by Zuurix Facebook page</li>
+<li>100 Twitter followers @Developer Zuurix</li>
+<li>10 patrons on Patreon</li>
+<li>200 members in Games by Zuurix Steam group</li>
+<li>50 subscribers on Zuurix YouTube channel</li>
 </ul>
 
 <comments>
