Community goals text style updated

--- a/community/index.html
+++ b/community/index.html
@@ -26,12 +26,12 @@ title: Zuurix.com - Community
 </comments>
 
 <ul style="list-style-type:none">
-<li>50 likes on Sector Six Facebook page</li>
-<li>50 likes on Games by Zuurix Facebook page</li>
-<li>100 Twitter followers @Developer Zuurix</li>
-<li>10 patrons on Patreon</li>
-<li>200 members in Games by Zuurix Steam group</li>
-<li>50 subscribers on Zuurix YouTube channel</li>
+<li><h4>50 likes on Sector Six Facebook page</h4></li>
+<li><h4>50 likes on Games by Zuurix Facebook page</h4></li>
+<li><h4>100 Twitter followers @Developer Zuurix</h4></li>
+<li><h4>10 patrons on Patreon</h4></li>
+<li><h4>200 members in Games by Zuurix Steam group</h4></li>
+<li><h4>50 subscribers on Zuurix YouTube channel</h4></li>
 </ul>
 
 <comments>
