Community goals text style

--- a/community/index.html
+++ b/community/index.html
@@ -26,12 +26,12 @@ title: Zuurix.com - Community
 </comments>
 
 <ul style="list-style-type:none">
-<li><h4>50 likes on Sector Six Facebook page</h4></li>
-<li><h4>50 likes on Games by Zuurix Facebook page</h4></li>
-<li><h4>100 Twitter followers @Developer Zuurix</h4></li>
-<li><h4>10 patrons on Patreon</h4></li>
-<li><h4>200 members in Games by Zuurix Steam group</h4></li>
-<li><h4>50 subscribers on Zuurix YouTube channel</h4></li>
+<li><plain>-----50 likes on Sector Six Facebook page</plain></li>
+<li><plain>50 likes on Games by Zuurix Facebook page</plain></li>
+<li><plain>100 Twitter followers @Developer Zuurix</plain></li>
+<li><plain>10 patrons on Patreon</plain></li>
+<li><plain>200 members in Games by Zuurix Steam group</plain></li>
+<li><plain>50 subscribers on Zuurix YouTube channel</plain></li>
 </ul>
 
 <comments>
