Community goals changes

--- a/community/index.html
+++ b/community/index.html
@@ -25,8 +25,8 @@ title: Zuurix.com - Community
 <a>Community goals</a>
 </comments>
 
-<ul style="list-style-type:none">
-<li><plain>-----50 likes on Sector Six Facebook page</plain></li>
+<ul style="list-style-type:bullet">
+<li><plain>50 likes on Sector Six Facebook page</plain></li>
 <li><plain>50 likes on Games by Zuurix Facebook page</plain></li>
 <li><plain>100 Twitter followers @Developer Zuurix</plain></li>
 <li><plain>10 patrons on Patreon</plain></li>
