--- a/community/index.html
+++ b/community/index.html
@@ -14,6 +14,7 @@ title: Zuurix.com - Community
 <li><a href="https://www.patreon.com/zuurix" target="_blank">Zuurix's Patreon page</a></li>
 <li><a href="https://www.facebook.com/GamesByZuurix/" target="_blank">Zuurix's Facebook page</a></li>
 <li><a href="http://steamcommunity.com/groups/GamesByZuurix" target="_blank">Zuurix's Steam group</a></li>
+<li><a href="https://www.youtube.com/channel/UCg9MuEB5cHmjTfSaye4Wk6Q/videos" target="_blank">Zuurix's YouTube channel</a></li>
 <li><a href="https://twitter.com/DeveloperZuurix" target="_blank">Zuurix on Twitter</a></li>
 <li><a href="https://zuurix.itch.io/" target="_blank">Zuurix on Itch.io</a></li>
 <li><a href="http://www.indiedb.com/members/zuurix" target="_blank">Zuurix on IndieDB</a></li>
