Updated press kit

--- a/sector-six-press-kit/index.html
+++ b/sector-six-press-kit/index.html
@@ -110,13 +110,13 @@ title: Zuurix.com - Sector Six press kit
 	<a>Screenshots</a>
 	</comments>
 	
-	<a width="560" height="315" href="http://imgur.com/CRuHOMV"><img src="http://i.imgur.com/CRuHOMV.png" title="source: imgur.com" /></a>
+	<a href="http://imgur.com/CRuHOMV"><img src="http://i.imgur.com/CRuHOMV.png" title="source: imgur.com" style="height: 480px; width: 320px;"/></a>
 	
-	<a width="560" height="315" href="http://imgur.com/NWQsORo"><img src="http://i.imgur.com/NWQsORo.png" title="source: imgur.com" /></a>
+	<a href="http://imgur.com/NWQsORo"><img src="http://i.imgur.com/NWQsORo.png" title="source: imgur.com" style="height: 480px; width: 320px;"/></a>
 	
-	<a width="560" height="315" href="http://imgur.com/V6g0B38"><img src="http://i.imgur.com/V6g0B38.png" title="source: imgur.com" /></a>
+	<a href="http://imgur.com/V6g0B38"><img src="http://i.imgur.com/V6g0B38.png" title="source: imgur.com" style="height: 480px; width: 320px;"/></a>
 	
-	<a width="560" height="315" href="http://imgur.com/NMicgHg"><img src="http://i.imgur.com/NMicgHg.png" title="source: imgur.com" /></a>
+	<a href="http://imgur.com/NMicgHg"><img src="http://i.imgur.com/NMicgHg.png" title="source: imgur.com" style="height: 480px; width: 320px;"/></a>
 	
 
 	<comments>
