Sector Six press kit update

--- a/sector-six-press-kit/index.html
+++ b/sector-six-press-kit/index.html
@@ -110,13 +110,13 @@ title: Zuurix.com - Sector Six press kit
 	<a>Screenshots</a>
 	</comments>
 	
-	<a href="http://imgur.com/CRuHOMV"><img src="http://i.imgur.com/CRuHOMV.png" title="source: imgur.com" style="height: 480px; width: 320px;"/></a>
+	<a href="http://imgur.com/CRuHOMV"><img src="http://i.imgur.com/CRuHOMV.png" title="source: imgur.com" style="height: 320px; width: 480px;"/></a>
 	
-	<a href="http://imgur.com/NWQsORo"><img src="http://i.imgur.com/NWQsORo.png" title="source: imgur.com" style="height: 480px; width: 320px;"/></a>
+	<a href="http://imgur.com/NWQsORo"><img src="http://i.imgur.com/NWQsORo.png" title="source: imgur.com" style="height: 320px; width: 480px;"/></a>
 	
-	<a href="http://imgur.com/V6g0B38"><img src="http://i.imgur.com/V6g0B38.png" title="source: imgur.com" style="height: 480px; width: 320px;"/></a>
+	<a href="http://imgur.com/V6g0B38"><img src="http://i.imgur.com/V6g0B38.png" title="source: imgur.com" style="height: 320px; width: 480px;"/></a>
 	
-	<a href="http://imgur.com/NMicgHg"><img src="http://i.imgur.com/NMicgHg.png" title="source: imgur.com" style="height: 480px; width: 320px;"/></a>
+	<a href="http://imgur.com/NMicgHg"><img src="http://i.imgur.com/NMicgHg.png" title="source: imgur.com" style="height: 320px; width: 480px;"/></a>
 	
 
 	<comments>
@@ -125,9 +125,9 @@ title: Zuurix.com - Sector Six press kit
 	
 	<a href="http://imgur.com/LY05dbc"><img src="http://i.imgur.com/LY05dbc.png" title="source: imgur.com" /></a>
 	
-	<a href="http://imgur.com/4EATdJT"><img src="http://i.imgur.com/4EATdJT.png" title="source: imgur.com" /></a>
+	<a href="http://imgur.com/4EATdJT"><img src="http://i.imgur.com/4EATdJT.png" title="source: imgur.com" style="height: 320px; width: 600px;"/></a>
 	
-	<a href="http://imgur.com/LYK7Hqk"><img src="http://i.imgur.com/LYK7Hqk.png" title="source: imgur.com" /></a>
+	<a href="http://imgur.com/LYK7Hqk"><img src="http://i.imgur.com/LYK7Hqk.png" title="source: imgur.com" style="height: 270px; width: 400px;"/></a>
 	
 	<a href="http://imgur.com/8AVlbze"><img src="http://i.imgur.com/8AVlbze.png" title="source: imgur.com" /></a>
 	
