Updated Sector Six page

--- a/sector-six/index.html
+++ b/sector-six/index.html
@@ -1,8 +1,12 @@
-<comments>
-	<a>Game description</a>
-	</comments>
-  
-  <p><i>Sector Six is under attack, the Machines, massive automatic spaceships are destroying everything! No weapon can stop the Machines, the only hope is the Elder Mechanism, an ancient device of the mighty Almadi civilization, who colonized Sector Six a long time ago.</i></p>
+---
+layout: default
+title: Zuurix.com - Sector Six press kit
+---
+<div class="blurb">
+	
+	<h1>Sector Six press kit</h1>
+	
+        <p><i>Sector Six is under attack, the Machines, massive automatic spaceships are destroying everything! No weapon can stop the Machines, the only hope is the Elder Mechanism, an ancient device of the mighty Almadi civilization, who colonized Sector Six a long time ago.</i></p>
 
 	<p><i>You take the role of the Negati Armada's best fighter, who, due to a dramatic chain of events receives the Elder Mechanism. Go on an epic journey across the mysterious Sector, develop your spaceship, activate the Elder Mechanism and defeat the Machines, before it's too late!</i></p>
 	
@@ -35,3 +39,4 @@
 	
 	<a href="http://imgur.com/NMicgHg"><img src="http://i.imgur.com/NMicgHg.png" title="source: imgur.com" style="float: right; height: 320px; width: 480px;"/></a>
 	
+</div><!-- /.blurb -->
