--- a/sector-six/index.html
+++ b/sector-six/index.html
@@ -1,10 +1,18 @@
 ---
 layout: default
-title: Zuurix.com - Sector Six press kit
+title: Zuurix.com - Sector Six
 ---
 <div class="blurb">
 	
-	<h1>Sector Six press kit</h1>
+	<h1>Sector Six</h1>
+	
+	<a href="http://imgur.com/CRuHOMV"><img src="http://i.imgur.com/CRuHOMV.png" title="source: imgur.com" style="float: right; height: 320px; width: 480px;"/></a>
+	
+	<a href="http://imgur.com/NWQsORo"><img src="http://i.imgur.com/NWQsORo.png" title="source: imgur.com" style="float: right; height: 320px; width: 480px;"/></a>
+	
+	<a href="http://imgur.com/V6g0B38"><img src="http://i.imgur.com/V6g0B38.png" title="source: imgur.com" style="float: right; height: 320px; width: 480px;"/></a>
+	
+	<a href="http://imgur.com/NMicgHg"><img src="http://i.imgur.com/NMicgHg.png" title="source: imgur.com" style="float: right; height: 320px; width: 480px;"/></a>
 	
         <p><i>Sector Six is under attack, the Machines, massive automatic spaceships are destroying everything! No weapon can stop the Machines, the only hope is the Elder Mechanism, an ancient device of the mighty Almadi civilization, who colonized Sector Six a long time ago.</i></p>
 
@@ -29,14 +37,5 @@ title: Zuurix.com - Sector Six press kit
 	<li><p>Millions of randomly generated items</p></li>
 	<li><p>Choose your own difficulty with modular difficulty system</p></li>
 	</ol>
-		
-	
-	<a href="http://imgur.com/CRuHOMV"><img src="http://i.imgur.com/CRuHOMV.png" title="source: imgur.com" style="float: right; height: 320px; width: 480px;"/></a>
-	
-	<a href="http://imgur.com/NWQsORo"><img src="http://i.imgur.com/NWQsORo.png" title="source: imgur.com" style="float: right; height: 320px; width: 480px;"/></a>
-	
-	<a href="http://imgur.com/V6g0B38"><img src="http://i.imgur.com/V6g0B38.png" title="source: imgur.com" style="float: right; height: 320px; width: 480px;"/></a>
-	
-	<a href="http://imgur.com/NMicgHg"><img src="http://i.imgur.com/NMicgHg.png" title="source: imgur.com" style="float: right; height: 320px; width: 480px;"/></a>
 	
 </div><!-- /.blurb -->
