--- a/sector-six/index.html
+++ b/sector-six/index.html
@@ -8,9 +8,15 @@ title: Zuurix.com - Sector Six
 	
 	<a href="http://imgur.com/CRuHOMV"><img src="http://i.imgur.com/CRuHOMV.png" title="source: imgur.com" style="float: right; height: 320px; width: 480px;"/></a>
 	
+	
+	
 	<a href="http://imgur.com/NWQsORo"><img src="http://i.imgur.com/NWQsORo.png" title="source: imgur.com" style="float: right; height: 320px; width: 480px;"/></a>
 	
+	
+	
 	<a href="http://imgur.com/V6g0B38"><img src="http://i.imgur.com/V6g0B38.png" title="source: imgur.com" style="float: right; height: 320px; width: 480px;"/></a>
+	
+	
 	
 	<a href="http://imgur.com/NMicgHg"><img src="http://i.imgur.com/NMicgHg.png" title="source: imgur.com" style="float: right; height: 320px; width: 480px;"/></a>
 	
@@ -26,7 +32,7 @@ title: Zuurix.com - Sector Six
 	
 	<p><i>Repeat.</i> You destroyed enemies, mission accomplished! Time to upgrade your spaceship again and start another mission. But which part you will add your spaceship? Will you refill your alloy container? Will you upgrade your weapons with an amplifier? Will you choose weapon over defensive part? Which new ability you will unlock? Which mission will you choose? Story mission? Boss mission? Kill mission? Will you try to complete escort mission with increased difficulty? Will you try to resurrect destroyed region or secure region that is currently under siege? Innovative Sector Six systems will constantly provide hundreds of opportunities to keep creation and destruction fresh!</p>
 	
-	<p>Features:</p>
+	<comments>Features</comments>
 	
 	<ol style="list-style-type:disc">
 	<li><p>Spaceship building from procedurally generated parts</p></li>
