--- a/sector-six/index.html
+++ b/sector-six/index.html
@@ -6,19 +6,13 @@ title: Zuurix.com - Sector Six
 	
 	<h1>Sector Six</h1>
 	
-	<a href="http://imgur.com/CRuHOMV"><img src="http://i.imgur.com/CRuHOMV.png" title="source: imgur.com" style="height: 320px; width: 480px; float: right; margin: 20px 20px 20px 0;"/></a>
+	<img src="http://i.imgur.com/CRuHOMV.png" title="source: imgur.com" style="height: 320px; width: 480px; float: right; margin: 20px 20px 20px 0;"/>
 	
+	<img src="http://i.imgur.com/NWQsORo.png" title="source: imgur.com" style="height: 320px; width: 480px; float: right; margin: 20px 20px 20px 0;"/>
 	
+	<img src="http://i.imgur.com/V6g0B38.png" title="source: imgur.com" style="height: 320px; width: 480px; float: right; margin: 20px 20px 20px 0;"/>
 	
-	<a href="http://imgur.com/NWQsORo"><img src="http://i.imgur.com/NWQsORo.png" title="source: imgur.com" style="height: 320px; width: 480px; float: right; margin: 20px 20px 20px 0;"/></a>
-	
-	
-	
-	<a href="http://imgur.com/V6g0B38"><img src="http://i.imgur.com/V6g0B38.png" title="source: imgur.com" style="height: 320px; width: 480px; float: right; margin: 20px 20px 20px 0;"/></a>
-	
-	
-	
-	<a href="http://imgur.com/NMicgHg"><img src="http://i.imgur.com/NMicgHg.png" title="source: imgur.com" style="height: 320px; width: 480px; float: right; margin: 20px 20px 20px 0;"/></a>
+	<img src="http://i.imgur.com/NMicgHg.png" title="source: imgur.com" style="height: 320px; width: 480px; float: right; margin: 20px 20px 20px 0;"/>
 	
         <p><i>Sector Six is under attack, the Machines, massive automatic spaceships are destroying everything! No weapon can stop the Machines, the only hope is the Elder Mechanism, an ancient device of the mighty Almadi civilization, who colonized Sector Six a long time ago.</i></p>
 
@@ -32,7 +26,9 @@ title: Zuurix.com - Sector Six
 	
 	<p><i>Repeat.</i> You destroyed enemies, mission accomplished! Time to upgrade your spaceship again and start another mission. But which part you will add your spaceship? Will you refill your alloy container? Will you upgrade your weapons with an amplifier? Will you choose weapon over defensive part? Which new ability you will unlock? Which mission will you choose? Story mission? Boss mission? Kill mission? Will you try to complete escort mission with increased difficulty? Will you try to resurrect destroyed region or secure region that is currently under siege? Innovative Sector Six systems will constantly provide hundreds of opportunities to keep creation and destruction fresh!</p>
 	
-	<comments>Features</comments>
+	<comments>
+	<a>Features</a>
+	</comments>
 	
 	<ol style="list-style-type:disc">
 	<li><p>Spaceship building from procedurally generated parts</p></li>
