--- a/games/index.html
+++ b/games/index.html
@@ -16,7 +16,7 @@ title: Zuurix.com - Games
 	<p>Sector Six is an elegant and innovative RPG/shoot 'em up hybrid.</p>	
 	
 	<ul style="list-style-type:none; margin-bottom: 180px;">
-	<li><a href="http://store.steampowered.com/app/465020/" target="_blank">Get Sector Six now from Steam!</a></li>
+	<li><a href="http://store.steampowered.com/app/465020/" target="_blank">Get from Steam</a></li>
 	<li><a href="http://zuurix.com/sector-six-press-kit/">View press kit</a></li>
 	</ul>
 	
@@ -29,7 +29,7 @@ title: Zuurix.com - Games
 	<p>The Cursed Legion is a free single-player collectible card game that is currently in early alpha.</p>	
 	
 	<ul style="list-style-type:none; margin-bottom: 180px;">
-	<li><a href="http://gamejolt.com/games/the-cursed-legion/245161" target="_blank">Get from GameJolt!</a></li>
+	<li><a href="http://gamejolt.com/games/the-cursed-legion/245161" target="_blank">Get from GameJolt</a></li>
 	<li><a href="http://zuurix.com/the-cursed-legion-press-kit/">View press kit</a></li>
 	</ul>
 		
