Games page update

--- a/games/index.html
+++ b/games/index.html
@@ -18,6 +18,9 @@ title: Zuurix.com - Games
 	<ul style="list-style-type:none; margin-bottom: 180px;">
 	<li><a href="http://store.steampowered.com/app/465020/" target="_blank">Get from Steam</a></li>
 	<li><a href="http://zuurix.com/sector-six-press-kit/">View press kit</a></li>
+	<li><a href="https://trello.com/b/oBPlp9SV/sector-six-roadmap" target="_blank">Upcoming updates</a></li>
+	<li><a href="https://www.facebook.com/SectorSixGame" target="_blank"></a>Facebook page</li>
+	<li></li>
 	</ul>
 	
 	<comments>
@@ -31,6 +34,8 @@ title: Zuurix.com - Games
 	<ul style="list-style-type:none; margin-bottom: 180px;">
 	<li><a href="http://gamejolt.com/games/the-cursed-legion/245161" target="_blank">Get from GameJolt</a></li>
 	<li><a href="http://zuurix.com/the-cursed-legion-press-kit/">View press kit</a></li>
+	<li><a href="https://trello.com/b/FLWUq1b3/the-cursed-legion-roadmap" target="_blank">Upcoming updates</a></li>
+	<li><a href="https://www.facebook.com/The-Cursed-Legion-398676680505420/" target="_blank"></a>Facebook page</li>
 	</ul>
 		
 	<comments>
