--- a/games/index.html
+++ b/games/index.html
@@ -19,7 +19,7 @@ title: Zuurix.com - Games
 	<li><a href="http://store.steampowered.com/app/465020/" target="_blank">Get from Steam</a></li>
 	<li><a href="http://zuurix.com/sector-six-press-kit/">View press kit</a></li>
 	<li><a href="https://trello.com/b/oBPlp9SV/sector-six-roadmap" target="_blank">Upcoming updates</a></li>
-	<li><a href="https://www.facebook.com/SectorSixGame" target="_blank"></a>Facebook page</li>
+	<li><a href="https://www.facebook.com/SectorSixGame" target="_blank">Facebook page</a></li>
 	<li></li>
 	</ul>
 	
@@ -35,7 +35,7 @@ title: Zuurix.com - Games
 	<li><a href="http://gamejolt.com/games/the-cursed-legion/245161" target="_blank">Get from GameJolt</a></li>
 	<li><a href="http://zuurix.com/the-cursed-legion-press-kit/">View press kit</a></li>
 	<li><a href="https://trello.com/b/FLWUq1b3/the-cursed-legion-roadmap" target="_blank">Upcoming updates</a></li>
-	<li><a href="https://www.facebook.com/The-Cursed-Legion-398676680505420/" target="_blank"></a>Facebook page</li>
+	<li><a href="https://www.facebook.com/The-Cursed-Legion-398676680505420/" target="_blank">Facebook page</a></li>
 	</ul>
 		
 	<comments>
