--- a/sector-six-press-kit/index.html
+++ b/sector-six-press-kit/index.html
@@ -104,7 +104,7 @@ title: Zuurix.com - Sector Six press kit
 	<a>Trailer</a>
 	</comments>
 	
-	<iframe width="560" height="315" src="https://www.youtube.com/watch?v=DRqp3gsbvOw" frameborder="0" allowfullscreen></iframe>
+	<iframe width="560" height="315" src="https://youtu.be/DRqp3gsbvOw" frameborder="0" allowfullscreen></iframe>
 	
 	<comments>
 	<a>Screenshots</a>
