--- a/community/index.html
+++ b/community/index.html
@@ -23,6 +23,12 @@ title: Zuurix.com - Community
 </ul>
 
 <comments>
+<a>Discord</a>
+</comments>
+
+<iframe src="https://discordapp.com/widget?id=331707688956329985&theme=dark" width="350" height="500" allowtransparency="true" frameborder="0"></iframe>
+
+<comments>
 <a>Comments</a>
 </comments>
 
