--- a/community/index.html
+++ b/community/index.html
@@ -26,7 +26,8 @@ title: Zuurix.com - Community
 <a>Discord</a>
 </comments>
 
-<iframe src="https://discordapp.com/widget?id=331707688956329985" width="350" height="500" allowtransparency="true" frameborder="0"></iframe>
+<a> <a>
+<iframe src="https://discordapp.com/widget?id=331707688956329985" width="100%" height="500" allowtransparency="true" frameborder="0"></iframe>
 
 <comments>
 <a>Comments</a>
