Added link to GameJolt

--- a/community/index.html
+++ b/community/index.html
@@ -19,6 +19,7 @@ title: Zuurix.com - Community
 <li><a href="https://zuurix.itch.io/" target="_blank">Zuurix on Itch.io</a></li>
 <li><a href="http://www.indiedb.com/members/zuurix" target="_blank">Zuurix on IndieDB</a></li>
 <li><a href="http://www.giantbomb.com/profile/zuurix/" target="_blank">Zuurix on Giant Bomb</a></li>
+<li><a href="http://gamejolt.com/@Zuurix" target="_blank">Zuurix on GameJolt</a></li>
 <li><a href="http://games-by-zuurix.wikia.com/wiki/Games_by_Zuurix_Wiki" target="_blank">Games by Zuurix Wiki</a></li>
 </ul>
 
